SUBDIRS = multi_type_vector

headersdir = $(includedir)/mdds-@API_VERSION@/mdds

headers_HEADERS = \
	flat_segment_tree_def.inl \
	flat_segment_tree.hpp \
	flat_segment_tree_itr.hpp \
	global.hpp \
	multi_type_matrix_def.inl \
	multi_type_matrix.hpp \
	multi_type_vector.hpp \
	multi_type_vector_itr.hpp \
	multi_type_vector_macro.hpp \
	multi_type_vector_types.hpp \
	node.hpp \
	point_quad_tree.hpp \
	quad_node.hpp \
	ref_pair.hpp \
	rtree_def.inl \
	rtree.hpp \
	segment_tree_def.inl \
	segment_tree.hpp \
	sorted_string_map_def.inl \
	sorted_string_map.hpp \
	trie_map_def.inl \
	trie_map.hpp \
	trie_map_itr.hpp
