SUBDIRS = aos soa

headersdir = $(includedir)/mdds-@API_VERSION@/mdds/multi_type_vector

headers_HEADERS = \
	block_funcs.hpp \
	collection_def.inl \
	collection.hpp \
	custom_func1.hpp \
	custom_func2.hpp \
	custom_func3.hpp \
	iterator_node.hpp \
	macro.hpp \
	standard_element_blocks.hpp \
	trait.hpp \
	types.hpp \
	types_util.hpp \
	util.hpp

