# SPDX-FileCopyrightText: 2025 Kohei Yoshida
#
# SPDX-License-Identifier: MIT

SUBDIRS = aos soa

headersdir = $(includedir)/mdds-@MDDS_API_VERSION@/mdds/multi_type_vector

headers_HEADERS = \
	block_funcs.hpp \
	collection_def.inl \
	collection.hpp \
	delayed_delete_vector.hpp \
	env.hpp \
	iterator_node.hpp \
	macro.hpp \
	standard_element_blocks.hpp \
	types.hpp \
	types_util.hpp \
	util.hpp

